--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ body{
     border: none;
     margin-bottom: 10px;
 }
+.left-btn:hover{
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(79, 70, 229, 0.4);
+}
 
 .lang-btn {
     display: inline-flex;
@@ -103,7 +107,7 @@ body{
     margin: 0;        /* remove default margin */
     flex-wrap: wrap;
     font-size: 11px;
-    margin-top: 25vh;
+    margin-top: 20vh;
     margin-left: 10px;
     margin-bottom: 10px;
 }
@@ -137,5 +141,30 @@ body{
 
 
 .footer{
-    height: 8vh;
+    height: 6.5vh;
+    background-image: linear-gradient( 135deg, #ba2bb0 10%, #465EFB 100%);
+    padding-left: 15px;
+    margin: 8px;
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 20px;
+    
+
+}
+
+.footer button{
+    padding: 15px 35px 15px 35px;
+    border-radius: 25px;
+    outline: none;
+    border: none;
+    font-weight: bold;
+
+}
+.footer button:hover{
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(79, 70, 229, 0.4);
+}
+.footer p{
+    margin: 4px;
 }
