--- a/style.css
+++ b/style.css
@@ -19,8 +19,55 @@ body{
     margin-top: 0px;
     padding-top: 0px;
     width: 100vw;
-    height: 8vh;
+    height: 7.5vh;
+    justify-content: space-between;
 }
+
+#logo{
+    height: 32px;
+    width: 32px;
+    margin: 18px 20px 20px 25px;
+}
+
+#home-icon{
+    height: 24px;
+    width: 24px;
+    margin: 9px 20px 30px 0px;
+    background-color:#121212 ;
+    border-radius: 100px;
+    padding: 13px;
+}
+
+#home-icon:hover{
+    transform: scale(1.05);
+    box-shadow: 0 1px 20px rgba(79, 70, 229, 0.4);
+}
+
+#search-plc {
+    background-image: url("search-icon.svg"); 
+    background-size: 25px 25px;
+    background-repeat: no-repeat;
+    background-position: 15px center;           
+    padding-left: 45px;                       
+    height: 40px;                               
+    border-radius: 50px;                        
+    border: none;                               
+    background-color: #1f1f1f;                  
+    color: white;                               
+    font-size: 16px;
+    margin-top: 10px;
+    width: 29vw;
+  }
+  
+  #search-plc::placeholder {
+    color: #b3b3b3;                     
+  }
+
+  #search-plc:focus {
+    outline: none;                       /* removes default blue outline */
+    box-shadow: 0 0 8px white;  /* faded glow effect */
+    transition: box-shadow 0.3s ease;    /* smooth fade-in */
+  }
 
 
 
@@ -28,8 +75,9 @@ body{
     width: 25vw;
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
-    background-color: #121212; 
+    border-radius: 8px;
+    background-color: #121212;
+    margin-left: 10px; 
    
 }
 
