--- a/style.css
+++ b/style.css
@@ -196,11 +196,77 @@ body{
 .right{
     display: flex;
     width: 75vw;
+    height: 65vh;
     background-color: #121212;
     border-radius: 8px;
     margin-left: 5px;
+    max-height: 65vh;
+    overflow: scroll;
 }
 
+#trending-songs{
+    font-size: x-large;
+    font-weight: bold;
+    
+}
+#trending-songs:hover{
+    text-decoration: underline;
+}
+.audio-card-container{
+    margin-left: 40px;
+    margin-top: 10px;
+    margin-right: 40px;
+    
+}
+
+.audio-card{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+.card{
+    
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 15px;
+    position: relative;
+}
+.play{
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    top: 125px;
+    right: 25px;
+    opacity: 1;
+    /* opacity: 1; TODO: When doing js.. animate it by toggling class*/
+    /* transition: all 1s ease-out; */
+
+}
+
+
+.card:hover{
+    background-color: #252525;
+    transition: 0.1s ease-in;
+
+}
+.card img{
+    border-radius: 5px;
+    height: 170px;
+    width: 160px;
+    margin-left: 6.5px;
+}
+.card h3{
+    font-size: medium;
+    font-weight: lighter;
+    margin: 5px;
+
+}
+.card p{
+    font-size: 14px;
+    color: #b3b3b3;
+    margin: 5px;
+}
 
 
 
